--- a/trunk/native/hdf5lib/CMakeLists.txt
+++ b/trunk/native/hdf5lib/CMakeLists.txt
@@ -23,6 +23,7 @@ set (HDFJAVA_JNI_HDF5_CSRCS
 )
 
 set (HDFJAVA_JNI_HDF5_CHDRS
+    ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5aImp.h
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5dImp.h
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5eImp.h
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5fImp.h
@@ -35,6 +36,7 @@ set (HDFJAVA_JNI_HDF5_CHDRS
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5sImp.h
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5tImp.h
     ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5util.h
+    ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR}/h5zImp.h
 )
 
 INCLUDE_DIRECTORIES( ${HDFJAVA_JNI_HDF5LIB_SOURCE_DIR} )
