Added usage for using debug native libs. Formatted source file

--- a/branches/hdf-java-2/test/uitest/CMakeLists.txt
+++ b/branches/hdf-java-2/test/uitest/CMakeLists.txt
@@ -167,6 +167,10 @@ foreach (CMAKE_INCLUDE_PATH ${CMAKE_JAVA_INCLUDE_PATH})
 endforeach (CMAKE_INCLUDE_PATH)
 set (CMAKE_JAVA_CLASSPATH "${CMAKE_JAVA_CLASSPATH}${CMAKE_JAVA_INCLUDE_FLAG_SEP}${${HDFJAVA_TEST_UITEST_TARGET}_JAR_FILE}")
 
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+  set (CMD_ARGS "-Dncsa.hdf.hdf5lib.H5.loadLibraryName=jhdf5_debug;")
+endif(CMAKE_BUILD_TYPE MATCHES Debug)
+
 add_test (
     NAME JUnit-gui-clear-objects
     COMMAND    ${CMAKE_COMMAND}
@@ -235,7 +239,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewMenu"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -256,7 +260,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewNewMenu"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -277,7 +281,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewGroups"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -308,7 +312,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewFiles"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -330,7 +334,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewExport"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -369,7 +373,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTableViewMenu"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -390,7 +394,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewNewVLDatatypes"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -411,7 +415,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestTreeViewFilters"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -433,7 +437,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewTAttr2"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -454,7 +458,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewCLMultipleFiles"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -475,7 +479,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewCLRootMultipleFiles"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -496,7 +500,7 @@ add_test (
 	COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewImageConversion"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -517,7 +521,7 @@ add_test (
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
         -D "TEST_PROGRAM=test.uitest.TestHDFViewLibBounds"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -530,7 +534,7 @@ add_test (
 )
 
 set_tests_properties (JUnit-gui-test-libversion PROPERTIES
-    DEPENDS "JUnit-gui-image-conversion"
+    DEPENDS JUnit-gui-image-conversion
 )
 
 #add_test (
@@ -538,7 +542,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewDatasetFrameSelection"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -559,7 +563,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewImageFrameSelection"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -580,7 +584,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewLinks"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -601,7 +605,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewCopyPaste"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -622,7 +626,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewCutPaste"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -643,7 +647,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewSaveTo"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
@@ -664,7 +668,7 @@ set_tests_properties (JUnit-gui-test-libversion PROPERTIES
 #    COMMAND "${CMAKE_COMMAND}"
 #        -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
 #        -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
-#        -D "TEST_ARGS:STRING=-ea;org.junit.runner.JUnitCore"
+#        -D "TEST_ARGS:STRING=${CMD_ARGS}-ea;org.junit.runner.JUnitCore"
 #        -D "TEST_PROGRAM=test.uitest.TestHDFViewCLGeometry"
 #        -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
 #        -D "TEST_FOLDER=${PROJECT_BINARY_DIR}"
