--- a/branches/hdf-java-2/test/object/CMakeLists.txt
+++ b/branches/hdf-java-2/test/object/CMakeLists.txt
@@ -76,13 +76,17 @@ endforeach (CMAKE_INCLUDE_PATH)
 set (CMAKE_JAVA_CLASSPATH "${CMAKE_JAVA_CLASSPATH}${CMAKE_JAVA_INCLUDE_FLAG_SEP}${${HDFJAVA_TEST_OBJECT_LIB_TARGET}_JAR_FILE}")
 set (testfilter "OK (153 tests)")
 
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+  set (CMD_ARGS "-Dncsa.hdf.hdf5lib.H5.loadLibraryName=jhdf5_debug;")
+endif(CMAKE_BUILD_TYPE MATCHES Debug)
+
 add_test (
     NAME JUnit-object-interface
     COMMAND "${CMAKE_COMMAND}"
         -D "TEST_TESTER=${CMAKE_Java_RUNTIME};${CMAKE_Java_RUNTIME_FLAGS}"
         -D "TEST_CLASSPATH:STRING=${CMAKE_JAVA_CLASSPATH}"
         -D "TEST_ARGS:STRING="
-        -D "TEST_PROGRAM=-ea;org.junit.runner.JUnitCore;test.object.AllH5ObjectTests"
+        -D "TEST_PROGRAM=${CMD_ARGS}-ea;org.junit.runner.JUnitCore;test.object.AllH5ObjectTests"
         -D "TEST_LIBRARY_DIRECTORY=${CMAKE_TEST_OUTPUT_DIRECTORY}"
         -D "TEST_FOLDER=${HDFJAVA_BINARY_DIR}"
         -D "TEST_OUTPUT=test/object/JUnit-object-interface.out"
