JAVA-1878: Display filter info. Upgraded to JUnit 4.11. Fixed 1.6 compile error with cast to (int). Add gui test for fiter info.
Tested: local linux

--- a/branches/hdf-java-2/test/modules/CMakeLists.txt
+++ b/branches/hdf-java-2/test/modules/CMakeLists.txt
@@ -53,7 +53,7 @@ file (WRITE ${PROJECT_BINARY_DIR}/Manifest.txt
 "
 )
 
-set (CMAKE_JAVA_INCLUDE_PATH "${HDFJAVA_LIB_DIR}/junit.jar;${HDFJAVA_JARS_TO_EXPORT};${HDFJAVA_HDFVIEWJAR_TO_EXPORT};${HDFJAVA_FEST_JARS};${HDFJAVA_LOGGING_JAR};${HDFJAVA_LOGGING_SIMPLE_JAR}")
+set (CMAKE_JAVA_INCLUDE_PATH "${HDFJAVA_LIB_DIR}/junit.jar;${HDFJAVA_LIB_DIR}/hamcrest-core.jar;${HDFJAVA_JARS_TO_EXPORT};${HDFJAVA_HDFVIEWJAR_TO_EXPORT};${HDFJAVA_FEST_JARS};${HDFJAVA_LOGGING_JAR};${HDFJAVA_LOGGING_SIMPLE_JAR}")
 
 add_jar (${HDFJAVA_TEST_MODULES_LIB_TARGET} MANIFEST ${HDFJAVA_TEST_MODULES_BINARY_DIR}/Manifest.txt SOURCES "${HDFJAVA_TEST_MODULES_SRCS}")
 get_target_property (${HDFJAVA_TEST_MODULES_LIB_TARGET}_JAR_FILE ${HDFJAVA_TEST_MODULES_LIB_TARGET} JAR_FILE)
