Add missing classpath jar

--- a/branches/hdf-java-2/test/modules/CMakeLists.txt
+++ b/branches/hdf-java-2/test/modules/CMakeLists.txt
@@ -102,7 +102,7 @@ file (WRITE ${PROJECT_BINARY_DIR}/TManifest.txt
 "
 )
 
-set (CMAKE_JAVA_INCLUDE_PATH "${HDFJAVA_LIB_DIR}/junit.jar;${HDFJAVA_JARS_TO_EXPORT};${HDFJAVA_HDFVIEWJAR_TO_EXPORT};${HDFJAVA_FEST_JARS};${HDFJAVA_LOGGING_JAR};${HDFJAVA_LOGGING_SIMPLE_JAR}")
+set (CMAKE_JAVA_INCLUDE_PATH "${HDFJAVA_LIB_DIR}/junit.jar;${HDFJAVA_LIB_DIR}/hamcrest-core.jar;${HDFJAVA_JARS_TO_EXPORT};${HDFJAVA_HDFVIEWJAR_TO_EXPORT};${HDFJAVA_FEST_JARS};${HDFJAVA_LOGGING_JAR};${HDFJAVA_LOGGING_SIMPLE_JAR}")
 
 add_jar (${HDFJAVA_TEST_UIMOD_TARGET} MANIFEST ${PROJECT_BINARY_DIR}/TManifest.txt ${HDFJAVA_TEST_UIMOD_SRCS})
 
