--- a/branches/hdf-java-2/test/modules/CMakeLists.txt
+++ b/branches/hdf-java-2/test/modules/CMakeLists.txt
@@ -109,7 +109,7 @@ add_jar (${HDFJAVA_TEST_UIMOD_TARGET} MANIFEST ${PROJECT_BINARY_DIR}/TManifest.t
 get_target_property (${HDFJAVA_TEST_UIMOD_TARGET}_JAR_FILE ${HDFJAVA_TEST_UIMOD_TARGET} JAR_FILE)
 #install_jar (${HDFJAVA_TEST_UIMOD_TARGET} ${HJAVA_INSTALL_DATA_DIR}/tests tests)
 
-add_dependencies (${HDFJAVA_TEST_UIMOD_TARGET} ${HDFJAVA_NCSA_HDF5_LIB_TARGET} ${HDFJAVA_NCSA_HDF_LIB_TARGET})
+add_dependencies (${HDFJAVA_TEST_UIMOD_TARGET} ${HDFJAVA_NCSA_VIEW_LIB_TARGET} ${HDFJAVA_NCSA_HDF5_LIB_TARGET} ${HDFJAVA_NCSA_HDF_LIB_TARGET})
 
 if (WIN32)
   set (CMAKE_JAVA_INCLUDE_FLAG_SEP ";")
