Add next VS version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -538,6 +538,8 @@ if (WIN32)
     set (BINARY_PLATFORM "${BINARY_PLATFORM}, using VISUAL STUDIO 2012")
   elseif (${CMAKE_C_COMPILER_VERSION} MATCHES "18.*")
     set (BINARY_PLATFORM "${BINARY_PLATFORM}, using VISUAL STUDIO 2013")
+  elseif (${CMAKE_C_COMPILER_VERSION} MATCHES "19.*")
+    set (BINARY_PLATFORM "${BINARY_PLATFORM}, using VISUAL STUDIO 2014")
   else (${CMAKE_C_COMPILER_VERSION} MATCHES "16.*")
     set (BINARY_PLATFORM "${BINARY_PLATFORM}, using VISUAL STUDIO ${CMAKE_C_COMPILER_VERSION}")
   endif (${CMAKE_C_COMPILER_VERSION} MATCHES "16.*")
