JAVA-1884: create GUI test to import tab-delimited file. Need to add tests for other delimiters.

--- a/branches/hdf-java-2/test/uitest/CMakeLists.txt
+++ b/branches/hdf-java-2/test/uitest/CMakeLists.txt
@@ -122,6 +122,7 @@ set (HDF_JAVA_TEST_REFERENCE
 
 set (HDF_JAVA_EXPORT_REFERENCE
       DS64BITS.xtxt
+      DS64BITS.ttxt
 )
 
 foreach (h5_file ${HDF_JAVA_TEST_FILES})
