--- a/branches/hdf-java-2/config/cmake/README.txt.cmake.in
+++ b/branches/hdf-java-2/config/cmake/README.txt.cmake.in
@@ -27,6 +27,7 @@ The compressed examples file HDFJavaExamples-0.1.1-Source.@BINARY_EXAMPLE_ENDING
 @HDFJAVA_PACKAGE_NAME@ install folder, can be built and tested with CMake and the supplied
 HDFJAVA_Examples.cmake file. The HDFJAVA_Examples.cmake expects @HDFJAVA_PACKAGE_NAME@ with @HDFJAVA_PACKAGE@ 
 to have been installed in the default location with JAVA @Java_VERSION_MAJOR@.@Java_VERSION_MINOR@ installed.
+Also, CMake and 7Zip utilities should be installed.
 
 To test the installation with the examples;
     Create a directory to run the examples.
@@ -38,7 +39,8 @@ To test the installation with the examples;
 
 When executed, the ctest script will save the results to the log file, test.log, as
 indicated by the ctest command. If you wish the to see more build and test information, 
-add "-VV" to the ctest command.
+add "-VV" to the ctest command. The output should show;
+      100% tests passed, 0 tests failed out of 48.
 
 For more information see USING_CMake_Examples.txt in the install folder. 
 ===========================================================================
