--- a/branches/hdf-java-2/test/object/CMakeLists.txt
+++ b/branches/hdf-java-2/test/object/CMakeLists.txt
@@ -91,7 +91,7 @@ add_test (
         -D "TEST_FOLDER=${HDFJAVA_BINARY_DIR}"
         -D "TEST_OUTPUT=test/object/JUnit-object-interface.out"
         -D "TEST_EXPECT=0"
-        #-D "TEST_LOG_LEVEL=debug"
+#        -D "TEST_LOG_LEVEL=trace"
         -D "TEST_FILTER:STRING=${testfilter}"
         -D "TEST_REFERENCE=test/object/JUnit-object-interface.txt"
         -D "TEST_MASK_ERROR=TRUE"
