--- a/branches/hdf-java-2/ncsa/hdf/view/hdfview.sh.cmake.in
+++ b/branches/hdf-java-2/ncsa/hdf/view/hdfview.sh.cmake.in
@@ -1,6 +1,13 @@
 #!/bin/bash
 
 # Set up default variable values if not supplied by the user.
+# This script file is used to execute the hdfview utility
+# ... hdfview.root property is for the install location
+# ...... default location is system property user.dir
+# ... hdfview.workdir property is for the working location to find files
+# ...... default location is system property user.home
+#
+
 
 # Adjust the following two variables to match your environment
 export JAVABIN= # bin folder of installed java if not found below
@@ -10,7 +17,7 @@ if [ ! -d "$JAVABIN" ]; then
     JAVABIN=$(dirname `which java`)
 fi
 
-$JAVABIN/java -Xmx1024M -Djava.library.path="$INSTALLDIR/lib" -Duser.dir="$INSTALLDIR" -Dhdfview.root="$INSTALLDIR" -jar "$INSTALLDIR/@HJAVA_INSTALL_JAR_DIR@/@HDFVIEW_JAR@" -root "$INSTALLDIR/share" $*
+$JAVABIN/java -Xmx1024M -Djava.library.path="$INSTALLDIR/lib" -Dhdfview.root="$INSTALLDIR" -jar "$INSTALLDIR/@HJAVA_INSTALL_JAR_DIR@/@HDFVIEW_JAR@" $*
 
 # alternate invocation when using modules
-#$JAVABIN/java -Xmx1024M -Djava.library.path="$INSTALLDIR/lib:$INSTALLDIR/lib/ext" -Duser.dir="$INSTALLDIR" -Dhdfview.root="$INSTALLDIR" -cp "$INSTALLDIR/@HJAVA_INSTALL_JAR_DIR@/@HDFVIEW_JAR@" ncsa.hdf.view.HDFView -root "$INSTALLDIR/share" $*
+#$JAVABIN/java -Xmx1024M -Djava.library.path="$INSTALLDIR/lib:$INSTALLDIR/lib/ext" -Dhdfview.root="$INSTALLDIR" -cp "$INSTALLDIR/@HJAVA_INSTALL_JAR_DIR@/@HDFVIEW_JAR@" ncsa.hdf.view.HDFView $*
