--- a/branches/hdf-java-2/ncsa/hdf/view/jrehdfview.bat.cmake.in
+++ b/branches/hdf-java-2/ncsa/hdf/view/jrehdfview.bat.cmake.in
@@ -14,6 +14,10 @@ rem access to either file, you may request a copy from helphdfgroup.org.
 
 rem File Name: hdfview.bat
 rem This batch file is used to execute the hdfview utility
+rem ... hdfview.root property is for the install location
+rem ...... default location is system property user.dir
+rem ... hdfview.workdir property is for the working location to find files
+rem ...... default location is system property user.home
 rem
 
 setlocal enabledelayedexpansion
@@ -31,9 +35,9 @@ if "!%JAVABIN%!\java.exe"=="\java.exe" (
         exit /b 1
 )
  
-start "HDFView" "%JAVABIN%\javaw.exe" -Xmx1024M -Duser.dir="%INSTALLDIR%" -Djava.library.path="%INSTALLDIR%\lib" -Dhdfview.root="%INSTALLDIR%" -jar "%INSTALLDIR%\lib\@HDFVIEW_JAR@" -root "%INSTALLDIR%\share" %1
+start "HDFView" "%JAVABIN%\javaw.exe" -Xmx1024M -Djava.library.path="%INSTALLDIR%\lib" -Dhdfview.root="%INSTALLDIR%" -jar "%INSTALLDIR%\lib\@HDFVIEW_JAR@" $*
 
 rem Alternate invocation when using modules
-rem start "HDFView" "%JAVABIN%\javaw.exe" -Xmx1024M -Djava.library.path="%INSTALLDIR%\lib;%INSTALLDIR%\lib\ext" -Dhdfview.root="%INSTALLDIR%" -cp "%INSTALLDIR%\lib\@HDFVIEW_JAR@" ncsa.hdf.view.HDFView -root "%INSTALLDIR%\share" $*
+rem start "HDFView" "%JAVABIN%\javaw.exe" -Xmx1024M -Djava.library.path="%INSTALLDIR%\lib;%INSTALLDIR%\lib\ext" -Dhdfview.root="%INSTALLDIR%" -cp "%INSTALLDIR%\lib\@HDFVIEW_JAR@" ncsa.hdf.view.HDFView $*
 
 exit /b 0
