Fix rootDir to use hdfview.root before user.dir Added PATH in windows batch file

--- a/branches/hdf-java-2/ncsa/hdf/view/hdfview.bat.cmake.in
+++ b/branches/hdf-java-2/ncsa/hdf/view/hdfview.bat.cmake.in
@@ -26,6 +26,7 @@ pushd %~dp0
 rem Adjust the following two variables to match your environment
 set JAVABIN=@JAVA_PATH@
 set INSTALLDIR=@CMAKE_INSTALL_PREFIX@
+set PATH=%PATH%;%INSTALLDIR%\bin
 
 echo.Setting environment
 if "!%JAVABIN%!\java.exe"=="\java.exe" (
